--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container">
                         <a href="#" class="navbar-brand">
-                            <img class="image" src="./image3/logo2.png" alt="logo image">
+                            <img class="image" src="image3/logo2.png" alt="logo image">
                         </a>
                         <button type="button" class="navbar-toggler" data-target="#name" data-toggle="collapse"
                             aria-controls="navbar" aria-expanded="false" aria-label="toggle-navigation">
